--- a/Pages/PhraseChooser.cshtml
+++ b/Pages/PhraseChooser.cshtml
@@ -3,15 +3,22 @@
 @using Blazor.Extensions.Storage;
 @inject LocalStorage localStorage
 
-<h1 class="title">
-Phrase Chooser
-</h1>
+<div class="container-fluid">
+    <div class="row">   
+        <h1 class="title flex-fill">
+            Phrase Chooser
+        </h1> 
+    </div>
+</div>
 
 <div class="jumbotron">
     <h1 class="display-3 text-primary">@CurrentPhrase</h1>
 </div>
 <div class="row justify-content-center">
-    <button type="button" style="width: 200px;" class="btn btn-primary btn-large mx-auto" onclick="@NewPhrase">New Phrase</button>
+    <button type="button" style="width: 200px;" class="btn btn-primary btn-large mx-auto" 
+        onclick="@NewPhrase">
+        New Phrase
+    </button>
 </div>
 <hr class="my-4">
 <div>
@@ -19,20 +26,23 @@ Phrase Chooser
             bind="@PhraseBox">
     </textarea>
     <div class="form-inline">
-        <input type="text" class="form-control mr-1 flex-fill" bind="@SaveTitle" />
-        <button type="button" class="btn btn-success" onclick="@SaveList">Save</button>
+        <input type="text" class="form-control flex-fill" bind="@SaveTitle" />
+        <button type="button" class="btn btn-success mx-1" onclick="@SaveList">Save</button>
+        <button type="button" class="btn btn-secondary" onclick="@ClearList">Clear</button>
     </div>
 </div>
 <div class="row">
 @foreach (var item in storedLists.Keys)
 {
-    <div class=" col-2 m-3">
-        <div class="card border-primary">
-            <div class="card-header bg-primary text-white">
-                @item
-                <button type="button" class="btn btn-outline-danger btn-sm float-right" onclick="@(() => DeleteList(item))">
-                    <span class="oi oi-trash" aria-hidden="true"></span>
-                </button>
+    <div class="col-2 m-3" onclick="@(() => LoadList(item))">
+        <div class='card @(item == SaveTitle ? "border-primary" : "border-secondary")'>
+            <div class='card-header  @(item == SaveTitle ? "text-white bg-primary" : "bg-secondary")'>
+                <h4 class="card-title">
+                    @item> 
+                    <a role="button" class="btn btn-outline-danger btn-sm float-right" onclick="@(() => DeleteList(item))">
+                        <span class="oi oi-trash" aria-hidden="true"></span>
+                    </a>
+                </h4>
             </div>
             <ul class="list-group list-group-flush">
                 @foreach (var p in storedLists[item].Take(5))
@@ -49,7 +59,7 @@ Phrase Chooser
     List<string> phrases;
     Random rand = new Random();
 
-    string CurrentPhrase = "";
+    string CurrentPhrase = " ";
     string phraseBox = "";
     string PhraseBox
     {
@@ -63,6 +73,7 @@ Phrase Chooser
             return phraseBox;
         }
     }
+    bool IsHelpOpen { get; set; }
 
     string SaveTitle = "";
     Dictionary<string, List<string>> storedLists = new Dictionary<string, List<string>>();
@@ -85,15 +96,31 @@ Phrase Chooser
 
     void SaveList()
     {
-        storedLists[SaveTitle] = phrases;
+        storedLists[SaveTitle] = phrases.Where(s => !string.IsNullOrWhiteSpace(s)).ToList();
+        // After stripping whitespace, reload the list on save.
+        LoadList(SaveTitle);
         var jsonLists = JsonConvert.SerializeObject(storedLists);
         localStorage.SetItem<string>("phraseLists", jsonLists);
     }
 
-    void DeleteList(string deleteKey)
+    void ClearList()
     {
-        storedLists.Remove(deleteKey);
+        SaveTitle = "";
+        PhraseBox = "";
+        CurrentPhrase = " ";
+    }
+
+    void DeleteList(string key)
+    {
+        storedLists.Remove(key);
         var jsonLists = JsonConvert.SerializeObject(storedLists);
         localStorage.SetItem<string>("phraseLists", jsonLists);
+    }
+
+    void LoadList(string key)
+    {
+        phrases = storedLists[key];
+        PhraseBox = string.Join("\n", phrases);
+        SaveTitle = key;
     }
 }
