--- a/Pages/PhraseChooser.cshtml
+++ b/Pages/PhraseChooser.cshtml
@@ -38,7 +38,7 @@
         <div class='card @(item == SaveTitle ? "border-primary" : "border-secondary")'>
             <div class='card-header  @(item == SaveTitle ? "text-white bg-primary" : "bg-secondary")'>
                 <h4 class="card-title">
-                    @item> 
+                    @item
                     <a role="button" class="btn btn-outline-danger btn-sm float-right" onclick="@(() => DeleteList(item))">
                         <span class="oi oi-trash" aria-hidden="true"></span>
                     </a>
