--- a/Shared/NavMenu.cshtml
+++ b/Shared/NavMenu.cshtml
@@ -1,5 +1,8 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Teacher Tools</a>
+    <a class="navbar-brand" href="">
+        <img src="/favicon-32x32.png" />
+        Teacher Tools
+    </a>
     <button class="navbar-toggler" onclick=@ToggleNavMenu>
         <span class="navbar-toggler-icon"></span>
     </button>
