Look at that, it's mobile friendly

--- a/Shared/NavMenu.cshtml
+++ b/Shared/NavMenu.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">
-        <img src="/favicon-32x32.png" />
+        <img src="/favicon-32x32.png" class="mr-2" />
         Teacher Tools
     </a>
     <button class="navbar-toggler" onclick=@ToggleNavMenu>
