--- a/Pages/PhraseChooser.cshtml
+++ b/Pages/PhraseChooser.cshtml
@@ -5,54 +5,68 @@
 
 <div class="container-fluid">
     <div class="row">   
-        <h1 class="title flex-fill">
+        <h1 class="col flex-fill">
             Phrase Chooser
         </h1> 
     </div>
-</div>
 
-<div class="jumbotron">
-    <h1 class="display-3 text-primary">@CurrentPhrase</h1>
-</div>
-<div class="row justify-content-center">
-    <button type="button" style="width: 200px;" class="btn btn-primary btn-large mx-auto" 
-        onclick="@NewPhrase">
-        New Phrase
-    </button>
-</div>
-<hr class="my-4">
-<div>
-    <textarea class="form-control my-2" style="min-height: 200px;" aria-label="Phrases go here, one per line" 
-            bind="@PhraseBox">
-    </textarea>
-    <div class="form-inline">
-        <input type="text" class="form-control flex-fill" bind="@SaveTitle" />
-        <button type="button" class="btn btn-success mx-1" onclick="@SaveList">Save</button>
-        <button type="button" class="btn btn-secondary" onclick="@ClearList">Clear</button>
-    </div>
-</div>
-<div class="row">
-@foreach (var item in storedLists.Keys)
-{
-    <div class="col-md-2 m-2" onclick="@(() => LoadList(item))">
-        <div class='card @(item == SaveTitle ? "border-primary" : "border-secondary")'>
-            <div class='card-header  @(item == SaveTitle ? "text-white bg-primary" : "bg-secondary")'>
-                <h4 class="card-title">
-                    @item
-                    <a role="button" class="btn btn-outline-danger btn-sm float-right" onclick="@(() => DeleteList(item))">
-                        <span class="oi oi-trash" aria-hidden="true"></span>
-                    </a>
-                </h4>
+    <div class="row">
+        <div class="col ">
+            <div class="jumbotron">
+                <h1 class="display-3 text-primary">@CurrentPhrase</h1>
             </div>
-            <ul class="list-group list-group-flush">
-                @foreach (var p in storedLists[item].Take(5))
-                {
-                    <li class="list-group-item">@p</li>
-                }
-            </ul>
-        </div>  
+        </div>
     </div>
-}
+    <div class="row justify-content-center">
+        <button type="button" style="width: 200px;" class="btn btn-primary btn-large mx-auto" 
+                onclick="@NewPhrase">
+            New Phrase
+        </button>
+    </div>
+    <hr class="my-3">
+    <div class="row">
+        <div class="col">
+            <textarea class="form-control my-2" style="min-height: 200px;" aria-label="Phrases go here, one per line" 
+                      bind="@PhraseBox">
+            </textarea>
+        </div>
+    </div>
+    <div class="form-row mb-3">
+        <div class="col">
+            <input type="text" class="col form-control flex-fill" bind="@SaveTitle" />
+        </div>
+        <div class="col-auto">
+            <button type="button" class="col-auto btn btn-success mx-1" onclick="@SaveList">Save</button>
+        </div>
+        <div class="col-auto">
+            <button type="button" class="col-auto btn btn-secondary" onclick="@ClearList">Clear</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <div class="card-columns">
+    @foreach (var item in storedLists.Keys)
+    {
+                <div class='card @(item == SaveTitle ? "border-primary" : "border-secondary")' onclick="@(() => LoadList(item))">
+                    <div class='card-header  @(item == SaveTitle ? "text-white bg-primary" : "bg-secondary")'>
+                        <h4 class="card-title">
+                            @item
+                            <a role="button" class="btn btn-outline-danger btn-sm float-right" onclick="@(() => DeleteList(item))">
+                                <span class="oi oi-trash" aria-hidden="true"></span>
+                            </a>
+                        </h4>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        @foreach (var p in storedLists[item].Take(5))
+                        {
+                            <li class="list-group-item">@p</li>
+                        }
+                    </ul>
+                </div>  
+    }
+            </div>
+        </div>
+    </div>
 </div>
 
 @functions {
