Fixes for accessability, lighthouse

--- a/Pages/PhraseChooser.cshtml
+++ b/Pages/PhraseChooser.cshtml
@@ -33,7 +33,7 @@
     </div>
     <div class="form-row mb-3">
         <div class="col">
-            <input type="text" class="col form-control flex-fill" bind="@SaveTitle" />
+            <input type="text" class="col form-control flex-fill" aria-label="List Items" bind="@SaveTitle" />
         </div>
         <div class="col-auto">
             <button type="button" class="col-auto btn btn-success mx-1" onclick="@SaveList">Save</button>
