--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,14 +1,13 @@
 ﻿@import url("open-iconic/font/css/open-iconic-bootstrap.min.css");
 
-/* html,
-body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-} */
-
 app {
   position: relative;
   display: flex;
   flex-direction: column;
+}
+
+.btn {
+  font-size: 14px;
 }
 
 .top-row {
