--- a/Shared/NavMenu.cshtml
+++ b/Shared/NavMenu.cshtml
@@ -1,9 +1,9 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">
-        <img src="/favicon-32x32.png" class="mr-2" />
+        <img src="/favicon-32x32.png" sizes="32x32" class="mr-2" alt=""/>
         Teacher Tools
     </a>
-    <button class="navbar-toggler" onclick=@ToggleNavMenu>
+    <button class="navbar-toggler" role="presentation" aria-label="menu" onclick=@ToggleNavMenu>
         <span class="navbar-toggler-icon"></span>
     </button>
 </div>
