--- a/Shared/NavMenu.cshtml
+++ b/Shared/NavMenu.cshtml
@@ -15,6 +15,11 @@
                 <span class="oi oi-double-quote-serif-left" aria-hidden="true"></span> Phrase Chooser
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="wotd" Match=NavLinkMatch.All>
+                <span class="oi oi-comment-square" aria-hidden="true"></span> Word of the Day
+            </NavLink>
+        </li>
     </ul>
 </div>
 
