--- a/Pages/WordOfTheDay.cshtml
+++ b/Pages/WordOfTheDay.cshtml
@@ -6,10 +6,28 @@
 @inject WordInfoService wordInfoService;
 
 <div class="container-fluid">
-    <div class="row">   
-        <h1 class="col">
+    <div class="row justify-content-between mb-2">   
+        <h1 class="col-sm-auto">
             Word of the Day
         </h1> 
+        
+        <div class="col-sm-auto">
+            <div class="row no-gutters">
+                <div class="col">
+                    <input type="text" class="col form-control flex-fill" aria-label="Search" bind=@searchWord/>
+                </div>
+                <div class="col-auto">
+                    <button type="button" class="col-auto btn btn-sm btn-success mx-1" aria-label="search button" 
+                            onclick="@(() => GetWord(searchWord))">
+                        <span class="oi oi-magnifying-glass" aria-hidden="true"></span>
+                    </button>
+                </div>
+                <div class="col-auto">
+                    <button type="button" class="col-auto btn btn-sm btn-secondary" aria-label="random word" 
+                            onclick="@(() => GetRandomWord())">Random</button>
+                </div>
+            </div>
+        </div>
     </div>
 @if (word == null)
 {
@@ -141,6 +159,7 @@ else
 
 @functions {
     WordInfo word;
+    string searchWord;
 
     protected override async Task OnInitAsync()
     {
@@ -174,7 +193,14 @@ else
 
     async Task GetWord(string query)
     {
+        if (String.IsNullOrWhiteSpace(searchWord)) return;
         word = null;
         word = await wordInfoService.GetWordAsync(query);
+    }
+
+    async Task GetRandomWord()
+    {
+        word = null;
+        word = await wordInfoService.GetRandomWordAsync();
     }
 }
