--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -3,12 +3,12 @@
         <img src="/favicon-32x32.png" sizes="32x32" class="mr-2" alt=""/>
         Teacher Tools
     </a>
-    <button class="navbar-toggler" role="presentation" aria-label="menu" onclick=@ToggleNavMenu>
+    <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
 </div>
 
-<div class=@(collapseNavMenu ? "collapse" : null) onclick=@ToggleNavMenu>
+<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match=NavLinkMatch.All>
@@ -23,8 +23,10 @@
     </ul>
 </div>
 
-@functions {
+@code {
     bool collapseNavMenu = true;
+
+    string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     void ToggleNavMenu()
     {
