--- a/Pages/WordOfTheDay.razor
+++ b/Pages/WordOfTheDay.razor
@@ -12,7 +12,7 @@
         <div class="col-sm-auto">
             <div class="row no-gutters">
                 <div class="col">
-                    <input type="text" class="col form-control flex-fill" aria-label="Search" bind=@searchWord/>
+                    <input type="text" class="col form-control flex-fill" aria-label="Search" @bind="searchWord"/>
                 </div>
                 <div class="col-auto">
                     <button type="button" class="col-auto btn btn-sm btn-success mx-1" aria-label="search button" 
